syntax = "proto3";

option java_multiple_files = false;
option java_package = "coordinatorservice";
option java_outer_classname = "CoordinatorServiceProto";

package coordinatorservice;

// Service for computation coordination
service ComputationCoordinator {
  // Submit a list of numbers for processing
  rpc SubmitNumberList(NumberListRequest) returns (ComputationResponse) {}
  
  // Submit a file for processing
  rpc SubmitFile(FileRequest) returns (ComputationResponse) {}
  
  // Get the status of a processing job
  rpc GetStatus(StatusRequest) returns (StatusResponse) {}
}

// Request with a list of numbers to process
message NumberListRequest {
  string job_id = 1;
  repeated int32 numbers = 2;
}

// Request with a file to process
message FileRequest {
  string job_id = 1;
  string file_path = 2;
}

// Request to get status of a job
message StatusRequest {
  string job_id = 1;
}

// Response with job status details
message StatusResponse {
  enum JobStatus {
    PENDING = 0;
    RUNNING = 1;
    COMPLETED = 2;
    FAILED = 3;
    NOT_FOUND = 4;
  }
  
  JobStatus status = 1;
  string message = 2;
  double progress = 3;
  string result = 4;
}

// Response for computation requests
message ComputationResponse {
  bool success = 1;
  string job_id = 2;
  string message = 3;
}
